[MODFISTO-460] Changes based on feedback